--- a/about-us.html
+++ b/about-us.html
@@ -18,101 +18,101 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-link{
-color: #000000!important;
-
-}
-.ze49f65bae1aea86a022dbdea09f86bb1{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
-}
-.c23632d47e0acae5af799a0049ba8d69a a{
-font-size:16px;
-}
-.ba9ffe383520c870d1e07a3afa26941bf:hover{
-box-shadow: 0 50.1px 50.3px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-a{
-text-decoration: none!important;
-}
-.xc2bd9a4db73ab00901998184c5fe7bc9 a,.c23632d47e0acae5af799a0049ba8d69a a{
-color:#131313!important;
-text-decoration: underline !important;
-}
-.btn-md{
-padding: 15px 29.7px;
-border-radius: 0;
-}
-footer{
-background:#080808;
-color:#ffffff;
-}
 *{
 font-family: 'Kumbh Sans', sans-serif;
+}
+.nav-item{
+padding-left:8.1px;
+padding-right:8.5px;
+padding-top:4.8px;
+padding-bottom:4.8px;
 }
 ul{
 list-style: circle;
 }
-.navbar a{
-font-size: 17.5px!important;
-font-weight: bold;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
-}
-html{
-scroll-behavior: smooth;
-}
-.b2dbc1f80bdb67e826f8538eea984dcca{
-border: 1px solid #63808e31;
-border-radius: 5px;
-padding: 20px 20px;
-background: #eae8e4;
-}
-.nav-item{
-padding-left:8.4px;
-padding-right:7.5px;
-padding-top:4.8px;
-padding-bottom:5.2px;
-}
-.xc2bd9a4db73ab00901998184c5fe7bc9 p,.xc2bd9a4db73ab00901998184c5fe7bc9 a,.xc2bd9a4db73ab00901998184c5fe7bc9 span,.xc2bd9a4db73ab00901998184c5fe7bc9 label{
+.web7df8e81df46199993e09b8a796db81 p,.web7df8e81df46199993e09b8a796db81 span,.web7df8e81df46199993e09b8a796db81 label{
 font-size:16px!important;
 }
 footer *{
 font-size:16px !important;
 }
-.c23632d47e0acae5af799a0049ba8d69a p,.c23632d47e0acae5af799a0049ba8d69a span,.c23632d47e0acae5af799a0049ba8d69a label{
+.btn-md{
+padding: 14.5px 29.7px;
+border-radius: 0;
+}
+.web7df8e81df46199993e09b8a796db81 a{
+font-size:16px;
+}
+footer a{
+color:#ffffff;
+text-decoration: underline;
+}
+footer{
+background:#121212;
+color:#ffffff;
+}
+.c8940a22298d35c2856cabff3a1e34473 p,.c8940a22298d35c2856cabff3a1e34473 a,.c8940a22298d35c2856cabff3a1e34473 span,.c8940a22298d35c2856cabff3a1e34473 label{
 font-size:16px!important;
+}
+.y68be7865c0580549ce2dea5b23fbd560{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+.navbar a{
+font-size: 18px!important;
+font-weight: bold;
+}
+.c8940a22298d35c2856cabff3a1e34473 a,.web7df8e81df46199993e09b8a796db81 a{
+color:#060606!important;
+text-decoration: underline !important;
+}
+.nav-link{
+color: #000000!important;
+
+}
+html{
+scroll-behavior: smooth;
+}
+.fa11ac8c259a403381f9b1032909d5e70:hover{
+box-shadow: 0 49.9px 49.9px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+a{
+text-decoration: none!important;
+}
+.tdfc86d738515c20be3cef683cd715e02{
+border: 1px solid #74919f42;
+border-radius: 5px;
+padding: 20px 20px;
+background: #f7f5f1;
 }
 </style>
 </head>
 <body>
      
-<nav class="navbar-expand-lg navbar">
+<nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav ml-auto d-flex align-items-center"><li class="nav-item">
-<a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" href="index.html" >plumbing quotes</a>
+<ul class="d-flex align-items-center ml-auto navbar-nav"><li class="nav-item">
+<a class="yef32db3aac72ab9f97f7fb9de6e93f8e nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link yef32db3aac72ab9f97f7fb9de6e93f8e" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="f735ed9fcdfbc0d0229cb25c03239ec35 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link yef32db3aac72ab9f97f7fb9de6e93f8e" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="f735ed9fcdfbc0d0229cb25c03239ec35 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="yef32db3aac72ab9f97f7fb9de6e93f8e nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="f735ed9fcdfbc0d0229cb25c03239ec35 dropdown-toggle nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="nav-link dropdown-toggle yef32db3aac72ab9f97f7fb9de6e93f8e" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link f735ed9fcdfbc0d0229cb25c03239ec35" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link yef32db3aac72ab9f97f7fb9de6e93f8e" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -125,7 +125,7 @@ font-size:16px!important;
 </div>
 <div class="container py-5">
 <div class="row mb-5 pb-5">
-<div class="col-md-12 mb-3 b2dbc1f80bdb67e826f8538eea984dcca">
+<div class="col-md-12 mb-3 tdfc86d738515c20be3cef683cd715e02">
 <div class="row-item d-flex align-left">
 <div><a href="" class="text-dark">
 <h4>MML Plumbing</h4></a>
@@ -157,22 +157,22 @@ plumber north london</iframe>
 </div>
 </div>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="f735ed9fcdfbc0d0229cb25c03239ec35" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="yef32db3aac72ab9f97f7fb9de6e93f8e" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="yef32db3aac72ab9f97f7fb9de6e93f8e" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="yef32db3aac72ab9f97f7fb9de6e93f8e" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="yef32db3aac72ab9f97f7fb9de6e93f8e" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="xb1d55abd43bab95a00aa577dbdcfbeac facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="xb1d55abd43bab95a00aa577dbdcfbeac pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google xb1d55abd43bab95a00aa577dbdcfbeac-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="xb1d55abd43bab95a00aa577dbdcfbeac twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook aba4689cf5b58a068fe5a463636316cbe" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest aba4689cf5b58a068fe5a463636316cbe" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google aba4689cf5b58a068fe5a463636316cbe-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="aba4689cf5b58a068fe5a463636316cbe twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
