--- a/sitemap.html
+++ b/sitemap.html
@@ -18,39 +18,20 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.w2a934d1d1ac999e2bea50c37b9a95b76{
+.nav-item{
+padding-left:7.7px;
+padding-right:8.1px;
+padding-top:4.5px;
+padding-bottom:5px;
+}
+.y4fe61c80455506224297bdd0ad3686e8{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.nav-link{
-color: #000000!important;
-
-}
-footer *{
-font-size:16px !important;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.ze5f2a682c49a51e03a7f4edc77cdd93e p,.ze5f2a682c49a51e03a7f4edc77cdd93e a,.ze5f2a682c49a51e03a7f4edc77cdd93e span,.ze5f2a682c49a51e03a7f4edc77cdd93e label{
-font-size:16px!important;
-}
-.xb1e1cf923337f392a1a7089ba9c860eb a{
-font-size:16px;
-}
-.nav-item{
-padding-left:7.5px;
-padding-right:8.1px;
-padding-top:4.6px;
-padding-bottom:5px;
-}
-html{
-scroll-behavior: smooth;
-}
-.ze5f2a682c49a51e03a7f4edc77cdd93e a,.xb1e1cf923337f392a1a7089ba9c860eb a{
-color:#000000!important;
-text-decoration: underline !important;
+.btn-md{
+padding: 15.2px 30.5px;
+border-radius: 0;
 }
 ul{
 list-style: circle;
@@ -58,24 +39,43 @@ list-style: circle;
 a{
 text-decoration: none!important;
 }
-.f2e2eb6f5df012c54e85d5e45d5dab7c5:hover{
-box-shadow: 0 49.7px 50.4px -25px rgb(0 0 0 / 30%);
+.u1e3161417f868ef5322f6412a0baf59e:hover{
+box-shadow: 0 49.9px 50.5px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
 }
-.navbar a{
-font-size: 17.7px!important;
-font-weight: bold;
-}
-.btn-md{
-padding: 15px 30px;
-border-radius: 0;
-}
-.xb1e1cf923337f392a1a7089ba9c860eb p,.xb1e1cf923337f392a1a7089ba9c860eb span,.xb1e1cf923337f392a1a7089ba9c860eb label{
+.yf8426634741e75377968514ad8a05913 p,.yf8426634741e75377968514ad8a05913 span,.yf8426634741e75377968514ad8a05913 label{
 font-size:16px!important;
 }
+.f67e699b094bb5299fd5f6dd2b77b3b5d a,.yf8426634741e75377968514ad8a05913 a{
+color:#050505!important;
+text-decoration: underline !important;
+}
 footer{
-background:#121212;
+background:#030303;
 color:#ffffff;
+}
+.nav-link{
+color: #000000!important;
+
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+.navbar a{
+font-size: 17.8px!important;
+font-weight: bold;
+}
+html{
+scroll-behavior: smooth;
+}
+.yf8426634741e75377968514ad8a05913 a{
+font-size:16px;
+}
+.f67e699b094bb5299fd5f6dd2b77b3b5d p,.f67e699b094bb5299fd5f6dd2b77b3b5d a,.f67e699b094bb5299fd5f6dd2b77b3b5d span,.f67e699b094bb5299fd5f6dd2b77b3b5d label{
+font-size:16px!important;
+}
+footer *{
+font-size:16px !important;
 }
 footer a{
 color:#ffffff;
@@ -88,24 +88,24 @@ text-decoration: underline;
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="align-items-center d-flex ml-auto navbar-nav"><li class="nav-item">
-<a class="x3ed4372b03610f7e2ba2547761ac1fe3 nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item">
+<a class="a131c6c9f750a7db75854a49fdf33af8c nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x3ed4372b03610f7e2ba2547761ac1fe3" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link x3ed4372b03610f7e2ba2547761ac1fe3" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="x3ed4372b03610f7e2ba2547761ac1fe3 nav-link" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="nav-link dropdown-toggle x3ed4372b03610f7e2ba2547761ac1fe3" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="dropdown-toggle nav-link a131c6c9f750a7db75854a49fdf33af8c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="x3ed4372b03610f7e2ba2547761ac1fe3 nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="a131c6c9f750a7db75854a49fdf33af8c nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ text-decoration: underline;
 </div>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="pt-5 py-4 container" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="x3ed4372b03610f7e2ba2547761ac1fe3" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="x3ed4372b03610f7e2ba2547761ac1fe3" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="x3ed4372b03610f7e2ba2547761ac1fe3" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="x3ed4372b03610f7e2ba2547761ac1fe3" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook z21bae08ecaeda86d3a561edbd32598cf" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="z21bae08ecaeda86d3a561edbd32598cf pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="z21bae08ecaeda86d3a561edbd32598cf google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="z21bae08ecaeda86d3a561edbd32598cf twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="caa5fe2b572bc00d2a11047bdcf831227 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="caa5fe2b572bc00d2a11047bdcf831227 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="caa5fe2b572bc00d2a11047bdcf831227 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="caa5fe2b572bc00d2a11047bdcf831227 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
