--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.y4044957c3ba9897f3e0666fbb22dc927:hover{
-box-shadow: 0 50.5px 49.7px -25px rgb(0 0 0 / 30%);
+ul{
+list-style: circle;
+}
+.v6b926fd4d20fae7cfa10581299ff2c03 p,.v6b926fd4d20fae7cfa10581299ff2c03 span,.v6b926fd4d20fae7cfa10581299ff2c03 label{
+font-size:16px!important;
+}
+.b5e3fb7375acbd1915b581cb10e4f3f7e:hover{
+box-shadow: 0 49.8px 50.5px -25px rgb(0 0 0 / 30%);
 transform: rotate(-2deg) scale(1.03);
 }
-footer{
-background:#040404;
-color:#ffffff;
+.f07765d8889ec4f4749ae3bf9d20df5e8 p,.f07765d8889ec4f4749ae3bf9d20df5e8 a,.f07765d8889ec4f4749ae3bf9d20df5e8 span,.f07765d8889ec4f4749ae3bf9d20df5e8 label{
+font-size:16px!important;
 }
-.yc85943afb8130c631f3fb4457f1901cf a,.ucf61b6d9cbb2e13b1caed74e256ec594 a{
-color:#020202!important;
-text-decoration: underline !important;
+a{
+text-decoration: none!important;
 }
-.w0db7940df761eb1c9cf5905dfbcb6dc8{
+.ta0daf53421240a30543c2d68c3c461e6{
 background-color:#ffc107!important;
 border-color:#ffc107!important;
 color:#000000!important;
 }
-.yc85943afb8130c631f3fb4457f1901cf p,.yc85943afb8130c631f3fb4457f1901cf a,.yc85943afb8130c631f3fb4457f1901cf span,.yc85943afb8130c631f3fb4457f1901cf label{
-font-size:16px!important;
-}
-.nav-link{
-color: #000000!important;
-
-}
-.ucf61b6d9cbb2e13b1caed74e256ec594 a{
-font-size:16px;
-}
-footer *{
-font-size:16px !important;
-}
-html{
-scroll-behavior: smooth;
-}
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.ucf61b6d9cbb2e13b1caed74e256ec594 p,.ucf61b6d9cbb2e13b1caed74e256ec594 span,.ucf61b6d9cbb2e13b1caed74e256ec594 label{
-font-size:16px!important;
+footer{
+background:#0b0b0b;
+color:#ffffff;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-a{
-text-decoration: none!important;
+html{
+scroll-behavior: smooth;
+}
+.v6b926fd4d20fae7cfa10581299ff2c03 a{
+font-size:16px;
+}
+.nav-link{
+color: #000000!important;
+
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
 .navbar a{
 font-size: 18.5px!important;
 font-weight: bold;
 }
-ul{
-list-style: circle;
+.f07765d8889ec4f4749ae3bf9d20df5e8 a,.v6b926fd4d20fae7cfa10581299ff2c03 a{
+color:#111111!important;
+text-decoration: underline !important;
+}
+.nav-item{
+padding-left:8px;
+padding-right:8.4px;
+padding-top:5px;
+padding-bottom:5.2px;
+}
+footer *{
+font-size:16px !important;
 }
 .btn-md{
 padding: 14.6px 29.6px;
 border-radius: 0;
-}
-.nav-item{
-padding-left:7.7px;
-padding-right:7.8px;
-padding-top:4.5px;
-padding-bottom:4.8px;
 }
 </style>
 </head>
@@ -89,24 +89,24 @@ padding-bottom:4.8px;
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
-<a class="yb787ab977cdaf31802788660169481bb nav-link" href="index.html" >plumbing quotes</a>
+<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
+<a class="nav-link xfc22c9e2d2eb3dd88844f1567df45675" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link yb787ab977cdaf31802788660169481bb" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="yb787ab977cdaf31802788660169481bb nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link yb787ab977cdaf31802788660169481bb" href="quote-my-job.html" >quote my job</a>
+<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="quote-my-job.html" >quote my job</a>
 </li>
 <li class="nav-item dropdown">
-<a class="nav-link yb787ab977cdaf31802788660169481bb dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
-<div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
+<a class="dropdown-toggle xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link yb787ab977cdaf31802788660169481bb" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link xfc22c9e2d2eb3dd88844f1567df45675" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="container py-4 pt-5" >
+<div class="py-4 container pt-5" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="yb787ab977cdaf31802788660169481bb" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="yb787ab977cdaf31802788660169481bb" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="yb787ab977cdaf31802788660169481bb" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="yb787ab977cdaf31802788660169481bb" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="xfc22c9e2d2eb3dd88844f1567df45675" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="uc504b232a8adebe1757e3fe69f86ecda facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="uc504b232a8adebe1757e3fe69f86ecda pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="google uc504b232a8adebe1757e3fe69f86ecda-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="uc504b232a8adebe1757e3fe69f86ecda twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="a4dd588d4a4695c1fb3dad9dc024f4c5c facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a4dd588d4a4695c1fb3dad9dc024f4c5c pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="a4dd588d4a4695c1fb3dad9dc024f4c5c google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter a4dd588d4a4695c1fb3dad9dc024f4c5c" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
