--- a/sitemap.html
+++ b/sitemap.html
@@ -18,68 +18,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-.nav-item{
-padding-left:7.7px;
-padding-right:8.1px;
-padding-top:4.5px;
-padding-bottom:5px;
+*{
+font-family: 'Kumbh Sans', sans-serif;
 }
-.y4fe61c80455506224297bdd0ad3686e8{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+footer a{
+color:#ffffff;
+text-decoration: underline;
 }
-.btn-md{
-padding: 15.2px 30.5px;
-border-radius: 0;
+footer{
+background:#0e0e0e;
+color:#ffffff;
 }
-ul{
-list-style: circle;
+footer *{
+font-size:16px !important;
+}
+.b76a64f57b5c8168f0ef514cf0e9eb3ef a{
+font-size:16px;
+}
+.e3f24a0126c2c304ac249293179d0bdcc a,.b76a64f57b5c8168f0ef514cf0e9eb3ef a{
+color:#111111!important;
+text-decoration: underline !important;
 }
 a{
 text-decoration: none!important;
 }
-.u1e3161417f868ef5322f6412a0baf59e:hover{
-box-shadow: 0 49.9px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.yf8426634741e75377968514ad8a05913 p,.yf8426634741e75377968514ad8a05913 span,.yf8426634741e75377968514ad8a05913 label{
+.e3f24a0126c2c304ac249293179d0bdcc p,.e3f24a0126c2c304ac249293179d0bdcc a,.e3f24a0126c2c304ac249293179d0bdcc span,.e3f24a0126c2c304ac249293179d0bdcc label{
 font-size:16px!important;
-}
-.f67e699b094bb5299fd5f6dd2b77b3b5d a,.yf8426634741e75377968514ad8a05913 a{
-color:#050505!important;
-text-decoration: underline !important;
-}
-footer{
-background:#030303;
-color:#ffffff;
 }
 .nav-link{
 color: #000000!important;
 
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
+.b76a64f57b5c8168f0ef514cf0e9eb3ef p,.b76a64f57b5c8168f0ef514cf0e9eb3ef span,.b76a64f57b5c8168f0ef514cf0e9eb3ef label{
+font-size:16px!important;
+}
+.btn-md{
+padding: 15.2px 29.6px;
+border-radius: 0;
+}
+.bbccc55c979d29ea9c21d78b3a0d1c363:hover{
+box-shadow: 0 50.4px 49.6px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+.nav-item{
+padding-left:8.1px;
+padding-right:8.2px;
+padding-top:4.9px;
+padding-bottom:5.3px;
 }
 .navbar a{
-font-size: 17.8px!important;
+font-size: 18px!important;
 font-weight: bold;
 }
 html{
 scroll-behavior: smooth;
 }
-.yf8426634741e75377968514ad8a05913 a{
-font-size:16px;
+ul{
+list-style: circle;
 }
-.f67e699b094bb5299fd5f6dd2b77b3b5d p,.f67e699b094bb5299fd5f6dd2b77b3b5d a,.f67e699b094bb5299fd5f6dd2b77b3b5d span,.f67e699b094bb5299fd5f6dd2b77b3b5d label{
-font-size:16px!important;
-}
-footer *{
-font-size:16px !important;
-}
-footer a{
-color:#ffffff;
-text-decoration: underline;
+.ae587ca271042cbeee0a9fe6079604c43{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
 }
 </style>
 </head>
@@ -88,24 +88,24 @@ text-decoration: underline;
 <a class="navbar-brand" href="https://olb45.netlify.app/index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
-<ul class="ml-auto align-items-center d-flex navbar-nav"><li class="nav-item">
-<a class="a131c6c9f750a7db75854a49fdf33af8c nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
+<ul class="d-flex navbar-nav ml-auto align-items-center"><li class="nav-item">
+<a class="xeef16284c0efa32efeb604125d0fc67a nav-link" href="https://olb45.netlify.app/index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="nav-link a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
+<a class="nav-link xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/quote-my-job.html" >quote my job</a>
 </li>
 <li class="dropdown nav-item">
-<a class="dropdown-toggle nav-link a131c6c9f750a7db75854a49fdf33af8c" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<a class="dropdown-toggle nav-link xeef16284c0efa32efeb604125d0fc67a" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu-right dropdown-menu" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="https://olb45.netlify.app/local-plumber.html"  >local plumber</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="https://olb45.netlify.app/local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="https://olb45.netlify.app/plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="a131c6c9f750a7db75854a49fdf33af8c nav-link" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
+<li class="nav-item"><a class="nav-link xeef16284c0efa32efeb604125d0fc67a" rel=nofollow href="https://olb45.netlify.app/about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -134,22 +134,22 @@ text-decoration: underline;
 </div>
 </section>
 <footer>
-<div class="pt-5 py-4 container" >
+<div class="pt-5 container py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="a131c6c9f750a7db75854a49fdf33af8c" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="xeef16284c0efa32efeb604125d0fc67a" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="xeef16284c0efa32efeb604125d0fc67a" href="https://olb45.netlify.app/about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=https://olb45.netlify.app/.html"></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="caa5fe2b572bc00d2a11047bdcf831227 facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="caa5fe2b572bc00d2a11047bdcf831227 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="caa5fe2b572bc00d2a11047bdcf831227 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="caa5fe2b572bc00d2a11047bdcf831227 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook v6bda9bb979911239b1aeb51a0e8b3f32" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="v6bda9bb979911239b1aeb51a0e8b3f32 pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="google v6bda9bb979911239b1aeb51a0e8b3f32-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="twitter v6bda9bb979911239b1aeb51a0e8b3f32" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
