--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,68 +19,68 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style type="text/css">
-ul{
-list-style: circle;
-}
-.v6b926fd4d20fae7cfa10581299ff2c03 p,.v6b926fd4d20fae7cfa10581299ff2c03 span,.v6b926fd4d20fae7cfa10581299ff2c03 label{
-font-size:16px!important;
-}
-.b5e3fb7375acbd1915b581cb10e4f3f7e:hover{
-box-shadow: 0 49.8px 50.5px -25px rgb(0 0 0 / 30%);
-transform: rotate(-2deg) scale(1.03);
-}
-.f07765d8889ec4f4749ae3bf9d20df5e8 p,.f07765d8889ec4f4749ae3bf9d20df5e8 a,.f07765d8889ec4f4749ae3bf9d20df5e8 span,.f07765d8889ec4f4749ae3bf9d20df5e8 label{
-font-size:16px!important;
+.navbar a{
+font-size: 17.8px!important;
+font-weight: bold;
 }
 a{
 text-decoration: none!important;
 }
-.ta0daf53421240a30543c2d68c3c461e6{
-background-color:#ffc107!important;
-border-color:#ffc107!important;
-color:#000000!important;
+.yab5b92489ae7137f2830e4d39e5eab5e p,.yab5b92489ae7137f2830e4d39e5eab5e a,.yab5b92489ae7137f2830e4d39e5eab5e span,.yab5b92489ae7137f2830e4d39e5eab5e label{
+font-size:16px!important;
 }
-footer{
-background:#0b0b0b;
-color:#ffffff;
+html{
+scroll-behavior: smooth;
+}
+.yab5b92489ae7137f2830e4d39e5eab5e a,.b6f1bf0203195d011957d7c24d3790e47 a{
+color:#0a0a0a!important;
+text-decoration: underline !important;
+}
+*{
+font-family: 'Kumbh Sans', sans-serif;
+}
+footer *{
+font-size:16px !important;
 }
 footer a{
 color:#ffffff;
 text-decoration: underline;
 }
-html{
-scroll-behavior: smooth;
-}
-.v6b926fd4d20fae7cfa10581299ff2c03 a{
+.b6f1bf0203195d011957d7c24d3790e47 a{
 font-size:16px;
+}
+.e532d52e7a8d9499ae4cbfc2006aa1a77:hover{
+box-shadow: 0 50px 50.4px -25px rgb(0 0 0 / 30%);
+transform: rotate(-2deg) scale(1.03);
+}
+footer{
+background:#121212;
+color:#ffffff;
+}
+.wcb8649bd3b25406362be28cc92eb572f{
+background-color:#ffc107!important;
+border-color:#ffc107!important;
+color:#000000!important;
+}
+ul{
+list-style: circle;
+}
+.b6f1bf0203195d011957d7c24d3790e47 p,.b6f1bf0203195d011957d7c24d3790e47 span,.b6f1bf0203195d011957d7c24d3790e47 label{
+font-size:16px!important;
 }
 .nav-link{
 color: #000000!important;
 
 }
-*{
-font-family: 'Kumbh Sans', sans-serif;
-}
-.navbar a{
-font-size: 18.5px!important;
-font-weight: bold;
-}
-.f07765d8889ec4f4749ae3bf9d20df5e8 a,.v6b926fd4d20fae7cfa10581299ff2c03 a{
-color:#111111!important;
-text-decoration: underline !important;
+.btn-md{
+padding: 15.4px 29.6px;
+border-radius: 0;
 }
 .nav-item{
 padding-left:8px;
-padding-right:8.4px;
-padding-top:5px;
-padding-bottom:5.2px;
-}
-footer *{
-font-size:16px !important;
-}
-.btn-md{
-padding: 14.6px 29.6px;
-border-radius: 0;
+padding-right:8.1px;
+padding-top:5.4px;
+padding-bottom:4.5px;
 }
 </style>
 </head>
@@ -88,25 +88,25 @@ border-radius: 0;
 <nav class="navbar navbar-expand-lg">
 <a class="navbar-brand" href="index.html"  ><img alt="img/logo.jpg" src="img/logo.jpg" ></a>
 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-<span class="navbar-toggler-icon"></span></button><div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="d-flex ml-auto navbar-nav align-items-center"><li class="nav-item">
-<a class="nav-link xfc22c9e2d2eb3dd88844f1567df45675" href="index.html" >plumbing quotes</a>
+<span class="navbar-toggler-icon"></span></button><div class="navbar-collapse collapse" id="navbarSupportedContent">
+<ul class="d-flex ml-auto align-items-center navbar-nav"><li class="nav-item">
+<a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="index.html" >plumbing quotes</a>
 </li>
 <li class="nav-item">
-<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
+<a class="nav-link fd12a32c8f67ef3da7fe04d52a13ba993" href="plumbing-quotes-north-london.html" >plumbing quotes north london</a>
 </li>
 <li class="nav-item">
-<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
+<a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="quote-my-plumbing-job.html" >quote my plumbing job</a>
 </li>
 <li class="nav-item">
-<a class="xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="quote-my-job.html" >quote my job</a>
+<a class="nav-link fd12a32c8f67ef3da7fe04d52a13ba993" href="quote-my-job.html" >quote my job</a>
 </li>
-<li class="nav-item dropdown">
-<a class="dropdown-toggle xfc22c9e2d2eb3dd88844f1567df45675 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
+<li class="dropdown nav-item">
+<a class="dropdown-toggle fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">More</a>
 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
 <a class="dropdown-item" href="local-plumber.html"  >local plumber</a><a class="dropdown-item" href="plumber-in-north-london.html"  >plumber in north london</a><a class="dropdown-item" href="local-plumbing-service.html"  >local plumbing service</a><a class="dropdown-item" href="plumber-north-london.html"  >plumber north london</a></div>
 </li>
-<li class="nav-item"><a class="nav-link xfc22c9e2d2eb3dd88844f1567df45675" rel=nofollow href="about-us.html">About Us</a>
+<li class="nav-item"><a class="fd12a32c8f67ef3da7fe04d52a13ba993 nav-link" rel=nofollow href="about-us.html">About Us</a>
 </li></ul>
 </div>
 </nav>
@@ -173,22 +173,22 @@ https://www.mmlplumbing.co.uk/</br>
 </p>
 </section>
 <footer>
-<div class="py-4 container pt-5" >
+<div class="container pt-5 py-4" >
 <div class="row"><div class="col-lg-3">
 <p>MML Plumbing</p>
-<p>Company Website : <a class="xfc22c9e2d2eb3dd88844f1567df45675" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
-</div><div class="col-lg-3"><p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="sitemap.html" rel="nofollow">Sitemap</a></p>
-<p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
-<p><a class="xfc22c9e2d2eb3dd88844f1567df45675" href="about-us.html" rel="nofollow">About Us</a></p>
+<p>Company Website : <a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="https://www.mmlplumbing.co.uk/" rel="nofollow">https://www.mmlplumbing.co.uk/</a></p>
+</div><div class="col-lg-3"><p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="sitemap.html" rel="nofollow">Sitemap</a></p>
+<p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="privacy-policy.html" rel="nofollow">Privacy Policy</a></p>
+<p><a class="fd12a32c8f67ef3da7fe04d52a13ba993" href="about-us.html" rel="nofollow">About Us</a></p>
 <p><img src="https://chart.googleapis.com/chart?chs=150x150&cht=qr&chl=" ></p>
 </p>
 </div><div class="col-lg-3">
 <div>
 <p>Follow us</p>
-<a href="https://www.facebook.com/mmlplumbing.co.uk" class="a4dd588d4a4695c1fb3dad9dc024f4c5c facebook" rel="nofollow"><i class="fa fa-facebook"></i></a>
-<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="a4dd588d4a4695c1fb3dad9dc024f4c5c pinterest" rel="nofollow"><i class="fa fa-linkedin"></i></a>
-<a href="https://www.instagram.com/mmlplumbingltd/" class="a4dd588d4a4695c1fb3dad9dc024f4c5c google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
-<a href="https://twitter.com/mmlplumbing" class="twitter a4dd588d4a4695c1fb3dad9dc024f4c5c" rel="nofollow"><i class="fa fa-twitter"></i></a>
+<a href="https://www.facebook.com/mmlplumbing.co.uk" class="facebook bd71b6f7fbfcf95fea99831fab5037e62" rel="nofollow"><i class="fa fa-facebook"></i></a>
+<a href="https://www.linkedin.com/in/mml-plumbing-ltd/" class="pinterest bd71b6f7fbfcf95fea99831fab5037e62" rel="nofollow"><i class="fa fa-linkedin"></i></a>
+<a href="https://www.instagram.com/mmlplumbingltd/" class="bd71b6f7fbfcf95fea99831fab5037e62 google-plus" rel="nofollow"><i class="fa fa-instagram"></i></a>
+<a href="https://twitter.com/mmlplumbing" class="bd71b6f7fbfcf95fea99831fab5037e62 twitter" rel="nofollow"><i class="fa fa-twitter"></i></a>
 </div>
 </div></div>
 </div>
